--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title>Dota 2 Guide</title>
-  <link rel="icon" type="image/png" href="img/icons8-dota-2-100 (1).png">
+  <link rel="icon" type="image/png" href="icons8-dota-2-100 (1).png">
   <link rel="stylesheet" href="css/st">
+  <body>
   <style>
     body {
-      background-image: url("news news-fon.jpeg");
+     background-image: url("news-fon.jpeg");
       background-size: cover;
       background-attachment: fixed;
       color: #FFFFFF;
@@ -78,7 +79,7 @@
   <div class="container">
     <div class="overlay"></div>
     <div class="button-container">
-      <img class="logo" src="img/Dota_2.webp" alt="Logo">
+      <img class="logo" src="Dota_2.webp" alt="Logo">
       <a class="button" href="index.html">Головна</a>
       <a class="button" href="page2.html">Герої</a>
       <a class="button" href="news.html">Новини</a>
@@ -100,44 +101,44 @@
    <p class="heading" id="2"><strong>Основні споруди</strong></p>
 
      <p class="description"style="font-size: 25px;">Башні</p>
-     <p style="font-size: 25px; font-weight: bold;">    <img src="img/Towers.webp" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+     <p style="font-size: 25px; font-weight: bold;">    <img src="Towers.webp" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description"> Башні є важливими структурами на карті гри. Вони розташовані на трьох лініях (верхній, середній та нижній) кожної команди і мають захищати територію від ворожих гравців і крипів. Башні поступово знищуються під час гри, коли ворожі гравці атакують їх. Коли башня більше не має здоров'я, вона падає, відкриваючи шлях до наступної башні або фонтана.</p>
        <p class="description"style="font-size: 25px;">Фонтан</p>
-     <p style="font-size: 25px; font-weight: bold;">    <img src="img/Dota_2_Review_Dire_Base.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+     <p style="font-size: 25px; font-weight: bold;">    <img src="Dota_2_Review_Dire_Base.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description">Фонтан розташований у базі кожної команди і відіграє важливу роль у відновленні здоров'я та мани гравців після битви або повернення до бази. Гравці можуть також купувати предмети у фонтані та використовувати його як безпечне пристанище.</p>
        <p class="description"style="font-size: 25px;">Бараки</p>
-       <p style="font-size: 25px; font-weight: bold;">    <img src="img/Barracks.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+       <p style="font-size: 25px; font-weight: bold;">    <img src="Barracks.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description"> Кожна команда має бараки, розташовані поза базою, на кожній лінії. Бараки виступають в якості точок відправлення крипів команди, які автоматично атакують ворожих гравців та башні. Бараки також можуть атакувати ворожих гравців, що знаходяться у їх зоні дії.</p>
 
        <p class="description"style="font-size: 25px;">Трон</p>
-       <p style="font-size: 25px; font-weight: bold;">    <img src="img/tron.webp" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+       <p style="font-size: 25px; font-weight: bold;">    <img src="tron.webp" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description">Трон в грі Dota 2 - це основна ціль кожної команди, яку їм потрібно знищити для перемоги в матчі. Кожна команда має свій власний трон, розташований у базі на протилежному кінці карти. Знищення трону ворожої команди приводить до закінчення гри і перемоги.</p>
 
         <p class="heading" id="3"><strong>Варди</strong></p>
         <p class="description"style="font-size: 25px;">Оглядовий вард</p>
-        <p style="font-size: 25px; font-weight: bold;">    <img src="img/Observer_ward.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+        <p style="font-size: 25px; font-weight: bold;">    <img src="Observer_ward.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description">Наглядові варди (Observer Wards): Це тип вардів, які надають видимість на певну область карти. Вони розміщуються гравцями для контролю над ключовими місцями, наприклад, близько до важливих башень, ворожих джунглів або областей зі спрощеним видимим полем. Наглядові варди допомагають виявляти рухи ворожих гравців і допомагають команді бути більш обізнаною з ситуацією на карті.</p>
 
         <p class="description"style="font-size: 25px;">Сторожовий вард</p>
-        <p style="font-size: 25px; font-weight: bold;">    <img src="img/Sentry_ward.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+        <p style="font-size: 25px; font-weight: bold;">    <img src="Sentry_ward.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description">Сторожові варди (Sentry Wards): Сторожові варди призначені для виявлення і розблокування невидимих ворожих одиниць, таких як ворожі варди, інвізибл герої або предмети, які надають невидимість. Вони також забезпечують видимість в областях, де знаходяться ворожі варди, дозволяючи їх легше знищити. Сторожові варди використовуються для контролю над видимістю та безпекою команди.</p>
 
        <p class="heading" id="4"><strong>Кріпи</strong></p>
         <p class="description"style="font-size: 25px;">Лайнові кріпи</p>
-        <p style="font-size: 25px; font-weight: bold;">    <img src="img/Untitled.png" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+        <p style="font-size: 25px; font-weight: bold;">    <img src="Untitled.png" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description">Крипи лайній: Кожна лінія (верхня, середня, нижня) має своїх лайнових кріпів, які автоматично з'являються та переміщуються вздовж лінії. Вони атакують ворожих кріпів, будівлі та гравців, що перешкоджає їм. Головна їх роль полягає в нанесенні шкоди та знищенні башень противника.
 
 Кріпи-катапульти: Це посилені лайнові кріпи, які з'являються періодично. Вони наносять більше шкоди будівлям та мають велику витривалість. Кріпи-катапульти є цілью для захисту або атаки, оскільки вони мають потужний вплив на прогрес гри.</p>
 
         <p class="description"style="font-size: 25px;">Лісові кріпи</p>
-        <p style="font-size: 25px; font-weight: bold;">    <img src="img/Untitled (1).png" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+        <p style="font-size: 25px; font-weight: bold;">    <img src="Untitled (1).png" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description">Нейтральні кріпи: Лісові кріпи розташовані у спеціальних зонках лісу. Їх можна атакувати і отримати додатковий досвід, золото та предмети. Лісові кріпи розділяються на різні групи, такі як големи, гарпії, вовки, тролі та інші, кожна з яких має свої унікальні властивості та можливості.
 
 Великі кріпи: У деяких зонках лісу можна зустріти великих кріпів, які мають значно більшу витривалість та наносять більше шкоди. Вони є важливим джерелом додаткового золота та досвіду для гравців, але їх атака може бути викликом для слабо підготовлених героїв.</p>
 
 <p class="heading" id="5"><strong>Рошан</strong></p>
         
-        <p style="font-size: 25px; font-weight: bold;">    <img src="img/istoriya-roshana-v-dota-21-640x360.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
+        <p style="font-size: 25px; font-weight: bold;">    <img src="istoriya-roshana-v-dota-21-640x360.jpg" alt="Опис зображення" style="width: 400px; height: auto; border: 0px solid grey;">
        <p class="description">Рошан (англ. "Roshan") є одним з найважливіших неігрових персонажів у грі Dota 2. Він є потужним боссом, який знаходиться в спеціальній печері, відомій як Рошанова печера.</p>
 <p class="description">Здоров'я та сила: Рошан має дуже велику кількість здоров'я та велику силу удару. Це робить його дуже небезпечним противником, який може швидко вбити героїв, що не підготовлені до битви.</p>
 <p class="description">Респаун: Рошан постійно відроджується через певний час після своєї смерті. Цей час респауну поступово збільшується з кожною його смертю протягом гри.</p>
