--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Гайд Dota 2</title>
+  <title>Hero Dota 2</title>
 <link rel="icon" type="image/png" href="icons8-dota-2-100 (1).png">
   <style>
     body {
