--- a/Pudge.html
+++ b/Pudge.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/png" href="icons8-dota-2-100 (1).png">
   <style>
     body {
-      background-image: url("news news-fon.jpeg");
+      background-image: url("news-fon.jpeg");
       background-size: cover;
       background-attachment: fixed;
       color: #FFFFFF;
