--- a/Ancient Aparation.html
+++ b/Ancient Aparation.html
@@ -101,7 +101,7 @@
 
 <p style="font-size: 25px; font-weight: bold;">Chilling Touch   <img src="Aparation/ability3.jpg" alt="Опис зображення" style="width: 60px; height: auto; border: 2px solid grey;">
 <p style="font-size: 20px; font-weight: bold;"><p style="font-size: 20px; font-weight: bold;">Збільшує дальність наступної атаки. Вона завдає значної магічної шкоди і уповільнює жертву.</p></p>
-<img src="img/Aparation/3.png" alt="Опис зображення" style="width: 800px; height: auto; border: 1px solid grey;">
+<img src="Aparation/3.png" alt="Опис зображення" style="width: 800px; height: auto; border: 1px solid grey;">
 
 <p style="font-size: 25px; font-weight: bold;">Ice Blast   <img src="Aparation/ability4.jpg" alt="Опис зображення" style="width: 60px; height: auto; border: 2px solid grey;">
 <p style="font-size: 20px; font-weight: bold;"><p style="font-size: 20px; font-weight: bold;">Відправляє снаряд у напрямку вибраної точки на карті. Повторне застосування запускає крижану кулю, яка вибухне там, де знаходився снаряд на момент активації. Чим далі він пролетить, тим більшим буде радіус вибуху. У ворогів, які опинилися в радіусі вибуху або на шляху крижаної кулі, застигає кров, через що вони не можуть лікуватися та відновлювати здоров'я. Якщо здоров'я враженої мети впаде нижче за певний рівень, вона миттєво розіб'ється на уламки.</p></p>
